syntax = "proto3";

package alcs_document;

service AlcsDocumentService {
  rpc getUploadUrl(DocumentUploadRequestGrpc) returns (DocumentUploadResponseGrpc);

  rpc createExternalDocument(CreateDocumentGrpcRequest) returns (CreateDocumentGrpcResponse);
}

message DocumentUploadRequestGrpc {
  string filePath = 1;
}

message DocumentUploadResponseGrpc {
  string uploadUrl = 1;
  string fileKey = 2;
}

message CreateDocumentGrpcRequest {
  optional string uploadedByUuid = 1;

  string mimeType = 2;

  string fileName = 3;

  string fileKey = 4;

  string source = 5;
}

message CreateDocumentGrpcResponse {
  string alcsDocumentUuid = 1;
}